--- a/Forms/HomeForm.resx
+++ b/Forms/HomeForm.resx
@@ -518,6 +518,9 @@
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>834, 387</value>
   </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
   </data>
